# EasyCardBackend

./: .env.example  .gitignore  .pdm-python  Makefile  README.md  compose.prod.yaml  compose.yaml  main.py  postmanCollection.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
admin/: __init__.py  cardAdmin.py  userAdmin.py
commands/: __init__.py  createsuperuser.py  deleteCards.py  generateCards.py  postman.py  tests.py
config/: app.py  provider.py  providers.py  settings.py
controllers/: authController.py  cardController.py
docker/local/: Dockerfile  entrypoint  start
docker/production/: Dockerfile
middleware/: authMiddleware.py
migrations/versions/: 11fcc8b995e2_.py  68cad1153fba_.py  6b5dbc389fd6_.py  abd8f9ce11ee_.py
models/: __init__.py  card.py  user.py
repositories/: __init__.py  baseRepository.py  baseRepositorySQLalchemy.py  cardRepository.py  userRepository.py
requirements/: all.txt  base.txt  dev.txt  test.txt
schemas/: authSchema.py  cardSchema.py
services/: authService.py  authServiceImpl.py  cardNumberExtractorService.py  cardNumberExtractorServiceImpl.py  cardService.py  cardServiceImpl.py  tokenService.py
templates/: index.html
tests/test_controllers/: test_auth_controllers.py  test_card_controllers.py
urls/: __init__.py  api.py
utils/: __init__.py  functions.py  types.py
validators/: authValidator.py  cardValidator.py
