[project]
name = "EasyCardBackend"
version = "0.1.0"
description = "API for managing credit cards and extracting credit card numbers from an image of a credit card using artificial intelligence."
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "flask-admin>=1.6.1",
    "flask-bcrypt>=1.0.1",
    "flask-injector>=0.15.0",
    "flask-migrate>=4.0.7",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=22.0.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0.84",
    "psycopg[binary]>=3.2.1",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
]

[tool.pdm.dev-dependencies]
dev = [
    "Flask-Testing>=0.8.1",
    "ruff>=0.5.3",
]


[tool.pdm.scripts]
start = "flask run --host=localhost"
dbinit = "flask db init"
migrate = "flask db migrate"
upgrade = "flask db upgrade"
shell = "flask shell"
createsuperuser = "flask createsuperuser"
routes = "flask routes"
gcards = "flask gcards"
dcards = "flask dcards"
postman = "flask postman --export=True"
ptest = "flask test"
testc = "coverage run -m unittest discover tests/ -v"
coverage = "coverage report -m && coverage html"
ruffcheck = "ruff check"
rufffix = "ruff check --fix"
ruffformat = "ruff format"
exports = "pdm export -f requirements --without-hashes"
docker = "docker compose up --build"
mu = {composite = ["migrate", "upgrade"]}
dev = {composite = ["mu", "start"]}
test = {composite = ["testc", "coverage"]}
dg = {composite = ["dcards", "gcards"]}
ruff = {composite = ["rufffix", "ruffformat"]}


[tool.ruff]
line-length = 130
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


[tool.pdm]
distribution = false
